--- a/acrticle/src/main/resources/application.properties
+++ b/acrticle/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=acrticle
+spring.application.name=Blog-Article
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/blogarticle
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
